--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/layout.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     <title>Contact Us</title>
 </head>
 
@@ -23,9 +25,9 @@
         </div>
     </header>
     <div class="tm-neon">
-        <a href="https://www.facebook.com/quantclubiitkgp/"><span></span><span></span><span></span><span></span>Facebook</a>
-        <a href="http://linkedin.com/company/quant-club-iit-kharagpur"><span></span><span></span><span></span><span></span>LinkedIn</a>
-        <a href="#"><span></span><span></span><span></span><span></span>Mail Us @</a>
+        <a href="https://www.facebook.com/quantclubiitkgp/"><span></span><span></span><span></span><span></span>Facebook<i class='fab fa-facebook'></i></a>
+        <a href="http://linkedin.com/company/quant-club-iit-kharagpur"><span></span><span></span><span></span><span></span>LinkedIn <i class='fab fa-linkedin-in'></i></a>
+        <a href="#"><span></span><span></span><span></span><span></span>Mail Us <i class='fas fa-at' style='font-size:36px'></i></a>
         <p>quantclubiitkgp@gmail.com</p>
     </div>
 </body>
